Doc/force-app/main/default/objects/Quote/fields/Additional_Tax_Language__c.field-meta.xml
<CustomField>
    <fullName>Additional_Tax_Language__c</fullName>
    <label>Additional Tax Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>