Doc/force-app/main/default/objects/Quote/fields/bI__c.field-meta.xml
<CustomField>
    <fullName>bI__c</fullName>
    <label>(b.I)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>