Doc/force-app/main/default/objects/Quote/fields/c__c.field-meta.xml
<CustomField>
    <fullName>c__c</fullName>
    <label>(c)</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>