Doc/force-app/main/default/objects/Quote/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>IF( 
DAY(ExpirationDate)&lt;10, 
&quot;0&quot;&amp;TEXT(DAY(ExpirationDate)), 
TEXT(DAY(ExpirationDate)) 
)&amp;&apos;-&apos;&amp; 
CASE(MONTH(ExpirationDate), 
1,&quot;Jan&quot;, 
2,&quot;Feb&quot;, 
3,&quot;Mar&quot;, 
4,&quot;Apr&quot;, 
5,&quot;May&quot;, 
6,&quot;Jun&quot;, 
7,&quot;Jul&quot;, 
8,&quot;Aug&quot;, 
9,&quot;Sep&quot;, 
10,&quot;Oct&quot;, 
11,&quot;Nov&quot;, 
12,&quot;Dec&quot;, 
&quot;&quot; 
)&amp;&apos;-&apos;&amp; 
RIGHT(Text(YEAR(ExpirationDate)),2)</formula>
    <label>Expiration Date</label>
    <type>Text</type>
</CustomField>