Doc/force-app/main/default/objects/Quote/fields/Min_year_on_year_committed_spend__c.field-meta.xml
<CustomField>
    <fullName>Min_year_on_year_committed_spend__c</fullName>
    <label>Min year on year committed spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>