Doc/force-app/main/default/objects/Quote/fields/OSA_No__c.field-meta.xml
<CustomField>
    <fullName>OSA_No__c</fullName>
    <label>OSA No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>