Doc/force-app/main/default/objects/Quote/fields/Quality_Issues_Level_1_2_3__c.field-meta.xml
<CustomField>
    <fullName>Quality_Issues_Level_1_2_3__c</fullName>
    <inlineHelpText>Quality Issues Level 1 2 of three
multi select level 1 and level 2 but no connection between the 2</inlineHelpText>
    <label>Quality Issues Level 1 (2-3)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Incorrect SOW</fullName>
            </value>
            <value>
                <fullName>Incorrect MSSA</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Other-Contract/ CRM</fullName>
            </value>
            <value>
                <fullName>CPQ Integration Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>