Doc/force-app/main/default/objects/Quote/fields/Quality_Issues_Level_1_3__c.field-meta.xml
<CustomField>
    <fullName>Quality_Issues_Level_1_3__c</fullName>
    <inlineHelpText>Quality Issues Level 1 of 3
single select level 1 with level 2 connected to level 1 and level 2 can be multi select</inlineHelpText>
    <label>Quality Issues Level 1 (1-3)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Incorrect SOW</fullName>
            </value>
            <value>
                <fullName>Incorrect MSSA</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Other-Contract/ CRM</fullName>
            </value>
            <value>
                <fullName>CPQ Integration Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>