Doc/force-app/main/default/objects/Quote/fields/Quality_Issues_Level_1_CPQintissue__c.field-meta.xml
<CustomField>
    <fullName>Quality_Issues_Level_1_CPQintissue__c</fullName>
    <label>Quality Issues Level 1(CQP Int Issue)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Net Unit Price re-calculation in CPQ (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>DLI Updates Didn’t Integrate (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>DLI segmenting issue (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Deal header updates didn’t integrate (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Deleted line items were not removed from CPQ (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Documents didn’t integrate (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Comments didn’t integrate (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Opportunity/quote were not created (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Misalignment of software terms between OP4i &amp; CPQ (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Issue with address fields (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Line item did not integrate (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Delay in integration (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Contacts Didn&apos;t Integrate (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Quote Line Creation Incomplete (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>User Error (CPQ Integration Issue)</fullName>
            </value>
            <value>
                <fullName>Other (CPQ Integration Issue)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>