Doc/force-app/main/default/objects/Quote/fields/Quality_Issues_Level_1_Incorrect_MSSA__c.field-meta.xml
<CustomField>
    <fullName>Quality_Issues_Level_1_Incorrect_MSSA__c</fullName>
    <label>Quality Issues Level 1 (Incorrect MSSA)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annex (Incorrect MSSA)</fullName>
            </value>
            <value>
                <fullName>DPA  (Incorrect MSSA)</fullName>
            </value>
            <value>
                <fullName>Liability Payment Terms (Incorrect MSSA)</fullName>
            </value>
            <value>
                <fullName>Master Terms Version (Incorrect MSSA)</fullName>
            </value>
            <value>
                <fullName>Support SLA (Incorrect MSSA)</fullName>
            </value>
            <value>
                <fullName>Unable to Open Attachment (Incorrect MSSA)</fullName>
            </value>
            <value>
                <fullName>Watermark (Incorrect MSSA)</fullName>
            </value>
            <value>
                <fullName>Other (Incorrect MSSA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>