Doc/force-app/main/default/objects/Quote/fields/Quality_Issues_Level_1_System_Error__c.field-meta.xml
<CustomField>
    <fullName>Quality_Issues_Level_1_System_Error__c</fullName>
    <label>Quality Issues Level 1 (System Error)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API (System Error)</fullName>
            </value>
            <value>
                <fullName>Calculation (System Error)</fullName>
            </value>
            <value>
                <fullName>Other (System Error)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>