Doc/force-app/main/default/objects/Quote/fields/Signature_Block__c.field-meta.xml
<CustomField>
    <fullName>Signature_Block__c</fullName>
    <formula>Contact.Full_Name__c&amp;&quot;, &quot;&amp;Contact.Title</formula>
    <label>Signature Block</label>
    <type>Text</type>
</CustomField>