Doc/force-app/main/default/objects/Quote/fields/Terms_a_and_d__c.field-meta.xml
<CustomField>
    <fullName>Terms_a_and_d__c</fullName>
    <label>Terms (a) and (d)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URL Terms</fullName>
            </value>
            <value>
                <fullName>Existing Terms</fullName>
                <default>true</default>
                <label>Existing Terms</label>
            </value>
            <value>
                <fullName>Cloud Terms</fullName>
                <isActive>false</isActive>
                <label>Cloud Terms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>