Doc/force-app/main/default/objects/Quote/recordTypes/OSA_Services_Only.recordType-meta.xml
<RecordType>
    <fullName>OSA_Services_Only</fullName>
    <active>true</active>
    <description>Use this record type for Services Only OSAs and Change Orders</description>
    <label>OSA: Services Only</label>
</RecordType>